Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
 
 <p>This project is a Palindrome Generator Library written in JAVA.  Currently, it is the fastest palindrome generator library available. It generates next palindrome within O(l/2) where l = length of the palindrome string. Also it generates the next palindrome from a given starting string in the same time. It does not bound you with the set of alphabet. You can provide an alphabet which JAVA String class accepts. Please explore for further knowledge. Also it contains some utility functions like palindrome detection etc.</p>
 
-<h3>
+<hr><h3>
+<a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h3>
+
+<p>See documentation at: <a href="https://github.com/mharisce/palindrome/wiki/_pages">https://github.com/mharisce/palindrome/wiki/_pages</a></p>
+
+<hr><h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>I, <a href="https://github.com/mharisce" class="user-mention">@mharisce</a>, am the author of this library. I have put about 70 hours in writing this library. I got inspiration to write this from a failure in Google Code Jam 2013.</p>
@@ -57,7 +62,7 @@ If you have trouble in finding palindrome.jar you can download the latest versio
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/mharisce" class="avatar"><img src="https://0.gravatar.com/avatar/1fa33f123dad5b6236bad2d730ab5df0?d=https%3A%2F%2Fidenticons.github.com%2Faaaa472e66ae47d7caf78da958a3aa76.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/mharisce">mharisce</a> maintains <a href="https://github.com/mharisce/palindrome">Palindrome Generator</a></p>
+      <p><a href="https://github.com/mharisce" class="avatar"><img src="https://1.gravatar.com/avatar/1fa33f123dad5b6236bad2d730ab5df0?d=https%3A%2F%2Fidenticons.github.com%2Faaaa472e66ae47d7caf78da958a3aa76.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/mharisce">mharisce</a> maintains <a href="https://github.com/mharisce/palindrome">Palindrome Generator</a></p>
 
 
       </div>
