Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 
 <p>You can contact me on <a href="mailto:m.haris.ce@gmail.com">m.haris.ce@gmail.com</a>
 Here is my website <a href="http://harisaltaf.com">link</a>.
-If you have trouble in finding palindrome.jar you can download the latest version from here.</p>
+If you have trouble in finding palindrome.jar you can <a href="https://github.com/mharisce/palindrome/tree/master/Releases">download the latest version from here</a>.</p>
         </article>
       </div>
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/mharisce" class="avatar"><img src="https://1.gravatar.com/avatar/1fa33f123dad5b6236bad2d730ab5df0?d=https%3A%2F%2Fidenticons.github.com%2Faaaa472e66ae47d7caf78da958a3aa76.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/mharisce">mharisce</a> maintains <a href="https://github.com/mharisce/palindrome">Palindrome Generator</a></p>
+      <p><a href="https://github.com/mharisce" class="avatar"><img src="https://2.gravatar.com/avatar/1fa33f123dad5b6236bad2d730ab5df0?d=https%3A%2F%2Fidenticons.github.com%2Faaaa472e66ae47d7caf78da958a3aa76.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/mharisce">mharisce</a> maintains <a href="https://github.com/mharisce/palindrome">Palindrome Generator</a></p>
 
 
       </div>
