Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/mharisce/palindrome/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/mharisce/palindrome/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/mharisce/palindrome" class="code">View Palindrome Generator on GitHub</a>
+          <a href="https://github.com/mharisce/palindrome-generator/tarball/master" class="download-button tar"><span>Download</span></a>
+          <a href="https://github.com/mharisce/palindrome-generator/zipball/master" class="download-button zip"><span>Download</span></a>
+          <a href="https://github.com/mharisce/palindrome-generator" class="code">View Palindrome Generator on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
@@ -47,6 +47,11 @@
 <p>See documentation at: <a href="https://github.com/mharisce/palindrome/wiki/_pages">https://github.com/mharisce/palindrome/wiki/_pages</a></p>
 
 <hr><h3>
+<a name="blog-post" class="anchor" href="#blog-post"><span class="octicon octicon-link"></span></a>Blog Post</h3>
+
+<p><a href="http://blog.harisaltaf.com/700/palindrome-generator-published-library-github/">Here is the link of the blog post on Palindrome Generator.</a></p>
+
+<h3>
 <a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
 <p>I, <a href="https://github.com/mharisce" class="user-mention">@mharisce</a>, am the author of this library. I have put about 70 hours in writing this library. I got inspiration to write this from a failure in Google Code Jam 2013.</p>
@@ -62,7 +67,7 @@ If you have trouble in finding palindrome.jar you can <a href="https://github.co
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/mharisce" class="avatar"><img src="https://2.gravatar.com/avatar/1fa33f123dad5b6236bad2d730ab5df0?d=https%3A%2F%2Fidenticons.github.com%2Faaaa472e66ae47d7caf78da958a3aa76.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/mharisce">mharisce</a> maintains <a href="https://github.com/mharisce/palindrome">Palindrome Generator</a></p>
+      <p><a href="https://github.com/mharisce" class="avatar"><img src="https://1.gravatar.com/avatar/1fa33f123dad5b6236bad2d730ab5df0?d=https%3A%2F%2Fidenticons.github.com%2Faaaa472e66ae47d7caf78da958a3aa76.png&amp;r=x&amp;s=60" width="48" height="48"/></a> <a href="https://github.com/mharisce">mharisce</a> maintains <a href="https://github.com/mharisce/palindrome-generator">Palindrome Generator</a></p>
 
 
       </div>
@@ -73,7 +78,7 @@ If you have trouble in finding palindrome.jar you can <a href="https://github.co
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/mharisce/palindrome/tarball/master" class="tar">tar</a><a href="https://github.com/mharisce/palindrome/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="https://github.com/mharisce/palindrome-generator/tarball/master" class="tar">tar</a><a href="https://github.com/mharisce/palindrome-generator/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
